# punchrs

./: Cargo.toml  example_config.toml
doc/: tui.drawio
src/: cli.rs  commands.rs  commands.rs.orig  execute.rs  main.rs  timesheet.rs  timesheet.rs.orig
src/cli/: commands.rs  execute.rs
src/tui/: app.rs
