[package]
name = "punchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
tabled = "0.15.0"
toml = "0.8.10"
